--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "swagger": "swagger-ui-react serve",
-    "predeploy":"yarn run build",
-    
-
+    "swagger": "swagger-ui-react serve"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
