--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "swagger": "swagger-ui-react serve"
+    "swagger": "swagger-ui-react serve",
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
